@@ -12,8 +12,8 @@ apply plugin: 'java-library'
 
 group 'com.github.clarkdo'
 version '1.0.0'
-sourceCompatibility = 1.9
-targetCompatibility = 1.9
+sourceCompatibility = javaVersion
+targetCompatibility = javaVersion
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -32,4 +32,51 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
+subprojects {
+    afterEvaluate {
+        repositories {
+            jcenter()
+        }
 
+        compileJava {
+            doFirst {
+                classpath = files()
+                options.compilerArgs = [
+                        '--module-path', configurations.compileClasspath.asPath,
+                        '--source-path', files(sourceSets.main.java.srcDirs).asPath,
+                        '-d', "${sourceSets.main.java.outputDir}/$moduleName"
+                ]
+            }
+            doLast {
+                copy {
+                    from "${sourceSets.main.java.outputDir}/$moduleName"
+                    into sourceSets.main.java.outputDir
+                }
+            }
+        }
+
+        compileTestJava {
+            doFirst {
+                classpath = files()
+                options.compilerArgs = [
+                        '--module-path', files(sourceSets.main.java.outputDir, configurations.testCompileClasspath).asPath,
+                        '--add-modules', "junit",
+                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                ]
+            }
+        }
+
+        test {
+            doFirst {
+                classpath = files()
+                jvmArgs = [
+                        '--module-path', files(sourceSets.main.java.outputDir, configurations.testRuntimeClasspath).asPath,
+                        '--add-modules', 'ALL-MODULE-PATH',
+                        '--add-reads', "$moduleName=junit",
+                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                ]
+            }
+        }
+    }
+}
